--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-Flask==2.0.3
-Werkzeug==2.0.3
-opencv-python==4.5.5.64
-numpy==1.22.0
-scikit-learn==1.0.2
+click==8.1.7
+colorama==0.4.6
+Flask==2.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+MarkupSafe==2.1.5
+numpy==2.1.1
+opencv-python==4.10.0.84
+scikit-learn==1.5.1
+scipy==1.14.1
+threadpoolctl==3.5.0
+Werkzeug==2.0.1
